tests/incremental_haste_blacklist/incremental_haste_blacklist.exp

Initial status:
No errors!

Move A.js to B.js (blacklisted):
Error: index.js:2
  2: require('A');
             ^^^ A. Required module not found


Found 1 error

Move B.js to A.js:
No errors!

Done!
